added notes